--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/randygrolemund/learning_nodejs/issues"
   },
-  "homepage": "https://github.com/randygrolemund/learning_nodejs#readme"
+  "homepage": "https://github.com/randygrolemund/learning_nodejs#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.1"
+  }
 }
