--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint": "^6.7.2",
     "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.1"
+  },
+  "dependencies": {
+    "prompt": "^1.0.0"
   }
 }
