--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "alert-node": "^2.0.3",
+    "bcrypt": "^3.0.7",
+    "password-hash": "^1.2.2",
     "prompt": "^1.0.0"
   }
 }
