--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "alert-node": "^2.0.3",
     "bcrypt": "^3.0.7",
+    "jsdoc": "^3.6.3",
     "password-hash": "^1.2.2",
     "prompt": "^1.0.0"
   }
